--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,8 @@ jobs:
       # Checkout
       - uses: actions/checkout@v2
 
-      - uses: actions/cache@v3
+      - name: Cache Library
+        uses: actions/cache@v3
         working-directory: "Dust Bunny"
         with:
           path: Library
