--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,8 @@ jobs:
   build:
     name: Build and upload the project
     runs-on: self-hosted
+    env:
+      working-directory: Dust Bunny
     steps:
       # Checkout
       - uses: actions/checkout@v2
@@ -13,7 +15,7 @@ jobs:
       - name: Cache Library
         uses: actions/cache@v3
         with:
-          path: Library
+          path: Dust Bunny/Library
           key: Library-SpringCleaning-TargetPlatform
           restore-keys: |
             Library-SpringCleaning-
@@ -22,6 +24,7 @@ jobs:
       # Build
       - name: Build
         uses: game-ci/unity-builder@v4
+        projectPath: Dust Bunny
         env:
           UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
           UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
@@ -34,7 +37,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: WindowsBuild
-          path: build
+          path: Dust Bunny/build
 
       # Correct ownership of _work directory
       - name: Fix _work directory ownership
