--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: WindowsBuild
-          path: Dust Bunny/build
+          path: build
 
       # Correct ownership of _work directory
       - name: Fix _work directory ownership
